--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
         <P>Technical skills: &nbsp;&nbsp;C, Python, Java, DSA.<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;HTML, CSS, JavaScript, React<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;MySQL, MongoDB. </P>
         <P>Langauges: &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;English, Hindi, Telugu.</P>
         
-        <a onclick="window.open('resume vishwak kotha.pdf')" class="cta">Download Resume<i class="fa fa-Download"></i></a>
+        <a onclick="window.open('cv.pdf')" class="cta">Download Resume<i class="fa fa-Download"></i></a>
         
       </div>
     </div>
